# src/main/java/co/edu/uniquindio/proyecto/infrastructure/rest/AuthController.java
@@ -2,8 +2,7 @@ package co.edu.uniquindio.proyecto.infrastructure.rest;
 
 import co.edu.uniquindio.proyecto.application.dto.request.LoginRequest;
 import co.edu.uniquindio.proyecto.application.dto.response.LoginResponse;
-import co.edu.uniquindio.proyecto.infrastructure.security.jwt.JwtService;
-import co.edu.uniquindio.proyecto.infrastructure.security.service.SecurityServiceImpl;
+import co.edu.uniquindio.proyecto.infrastructure.security.service.AuthService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -18,8 +17,7 @@ import org.springframework.web.bind.annotation.*;
 @CrossOrigin(origins = "*")
 public class AuthController {
 
-    private final JwtService jwtService;
-    private final SecurityServiceImpl securityService;
+    private final AuthService authService;
 
     /**
      * Login de usuario.
@@ -28,15 +26,6 @@ public class AuthController {
     public ResponseEntity<LoginResponse> login(
             @Valid @RequestBody LoginRequest request
     ) {
-
-        // Cargar usuario (esto valida que exista)
-        var userDetails = securityService.loadUserByUsername(request.usuarioId());
-
-        //  Generar token
-        String token = jwtService.generateToken(userDetails);
-
-        return ResponseEntity.ok(
-                new LoginResponse(token, "Bearer")
-        );
+        return ResponseEntity.ok(authService.login(request));
     }
 }
