# src/main/java/co/edu/uniquindio/proyecto/infrastructure/security/service/SecurityServiceImpl.java
@@ -1,34 +1,23 @@
 package co.edu.uniquindio.proyecto.infrastructure.security.service;
 
-import co.edu.uniquindio.proyecto.domain.entity.Usuario;
-import co.edu.uniquindio.proyecto.domain.repository.UsuarioRepository;
-import co.edu.uniquindio.proyecto.domain.valueobject.IdUsuario;
+import co.edu.uniquindio.proyecto.infrastructure.jpa.UsuarioJpaDataRepository;
+import co.edu.uniquindio.proyecto.infrastructure.security.CustomUserDetails;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.*;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
 
 @Service
 @RequiredArgsConstructor
 public class SecurityServiceImpl implements UserDetailsService {
 
-    private final UsuarioRepository usuarioRepository;
+    private final UsuarioJpaDataRepository usuarioJpaDataRepository;
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-
-        Usuario usuario = usuarioRepository.buscarPorId(new IdUsuario(username));
-
-        return new User(
-                usuario.getId().valor(),
-                "", //
-                usuario.estaActivo(),
-                true,
-                true,
-                true,
-                List.of(new SimpleGrantedAuthority("ROLE_" + usuario.getTipo().name()))
-        );
+        return usuarioJpaDataRepository.findByEmail(username)
+                .map(CustomUserDetails::new)
+                .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado: " + username));
     }
 }
